rnsc/tests/snapshots/error-lexer-type_hints-at_dubble.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
@dubble
----- STDERR -----
[E-005] Error: unknown type hint
   ╭─[ test_data/integration/error/lexer/type_hints/at_dubble.rns:1:1 ]
   │
 1 │ @dubble
   │ ───┬───  
   │    ╰───── '@dubble' is not a recognized type hint
   │ 
   │ Help: Did you mean '@double'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-005
───╯
----- HASH -----
not generated
