rnsc/tests/snapshots/error-lexer-type_hints-at_lon.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
@lon
----- STDERR -----
[E-005] Error: unknown type hint
   ╭─[ test_data/integration/error/lexer/type_hints/at_lon.rns:1:1 ]
   │
 1 │ @lon
   │ ──┬─  
   │   ╰─── '@lon' is not a recognized type hint
   │ 
   │ Help: Did you mean '@long'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-005
───╯
----- HASH -----
not generated
